<resources>
    <string name="app_name">Anggoro Beno Lukito</string>
    <string name="empty_search">No User Found</string>
    <string name="dummy_username">Anggoro</string>
    <string name="dummy_type">Admin</string>
    <string name="tv_result_error">Result could not be loaded</string>
    <string name="btn_retry">Retry</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_user_found">No User Found</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="repository">user_repository</string>
    <string name="followers">Followers</string>
    <string name="following">Followings</string>
    <string name="company">user_company</string>
    <string name="location">user_location</string>
    <string name="add_user_favourite">Added to Favourite</string>
    <string name="delete_user_favourite">Deleted from Favourite</string>
    <string name="fab_button_to_add_favourite">fab button to add favourite</string>
    <string name="admin">Admin</string>
    <string name="dummy_followers">25555</string>
    <string name="dummy_followings">255435</string>
    <string name="app_logo">github_logo</string>
    <string name="back_to_exit">Press back again to exit</string>
    <string name="search_user">Search User</string>
    <string name="favourite_user">Favourite User</string>
    <string name="user_avatar_image">User Avatar Image</string>
    <string name="empty_state_image">Empty State Image</string>
    <string name="powered_by_github_api">Powered By Github Api</string>
    <string name="message_undo">Cancel delete?</string>
    <string name="message_ok">OK</string>
    <string name="no_favourite_user">No Favourite User</string>
</resources>